--- a/server/views/cover.html
+++ b/server/views/cover.html
@@ -24,7 +24,7 @@
     <link href="/css/cover.css" rel="stylesheet">
       
       <!-- Font Awesome -->
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
       
       <!-- Fontes -->
 	<style>
@@ -54,7 +54,7 @@
           
                  <!-- ESTE É PARA O LOGIN -->
             <li class="dropdown nav-item py-0">
-              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><span class="fa fa-sign-in"></span> Login</a>
+              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fas fa-sign-in-alt"></i> Login</a>
                 <ul id="login-dp" class="dropdown-menu">
                     <li>
                          <div class="row">
@@ -84,7 +84,7 @@
             </li>
                  <!-- ESTE É PARA O REGISTAR -->
              <li class="dropdown nav-item py-0">
-                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><span class="fa fa-user-circle"></span> Registe-se</a>
+                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fas fa-user-circle"></i> Registe-se</a>
                     <ul id="register-dp" class="dropdown-menu">
                         <li>
                              <div class="row">
