--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -25,7 +25,7 @@
         <link href="/css/transversal.css" rel="stylesheet">
 
         <!-- Font Awesome -->
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
           <!-- Fontes -->
         <style>
@@ -55,7 +55,7 @@
                         <li class="dropdown">
                             <a href="#" id="primeiroultimonome" class="dropdown-toggle textuser" data-toggle="dropdown">Olá, Ana Li <b class="caret"></b></a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="#" id="logout" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Logout <i class="fa fa-sign-out"></i></a></li>
+                                    <li><a href="#" id="logout" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Logout <i class="fas fa-sign-out-alt"></i></a></li>
                             </ul>
                         </li>
                 </ul>
@@ -90,7 +90,7 @@
     <!-- Page Content -->
 <div class="container-fluid">
     
-        <div class="btn btn-default btn-arrow-right"><a href=""><span class="fa fa-home bread"></span></a></div>
+        <div class="btn btn-default btn-arrow-right"><a href=""><span class="fas fa-home bread"></span></a></div>
         <!--<div class="btn btn-default btn-arrow-right">Ola</div>
         <div class="btn btn-default btn-arrow-right">Danger</div>-->
 
