--- a/server/views/cover.html
+++ b/server/views/cover.html
@@ -19,6 +19,9 @@
       
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      
+    <!-- Bootstrap Validator -->
+    <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.1.3/dist/bootstrap-validate.js" ></script>
 
     <!-- Custom styles for this template -->
     <link href="/css/cover.css" rel="stylesheet">
@@ -65,14 +68,18 @@
                                      <form class="form" role="form" method="get" action="" accept-charset="UTF-8" id="loginnav">
                                             <div class="form-group">
                                                  <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                                 <input type="email" class="form-control" id="emaillogin" placeholder="Endereço Electrónico" required>
+                                                 <input type="email" class="form-control" id="emaillogin" placeholder="Endereço Electrónico">
                                             </div>
+                                            <script>bootstrapValidate('#emaillogin', 'email:Introduza um email válido!');</script>
+                                         
                                             <div class="form-group">
                                                  <label class="sr-only" for="exampleInputPassword2">Password</label>
-                                                 <input type="password" class="form-control" id="passwordlogin" placeholder="Palavra-passe" required>
+                                                 <input type="password" class="form-control" id="passwordlogin" placeholder="Palavra-passe">
                                                 <!-- Isto pode ser para um futuro -->
                                                  <!--<div class="help-block text-right"><a href="">Forget the password ?</a></div>-->
                                             </div>
+                                            <script>bootstrapValidate('#passwordlogin', 'required:Preencha este campo!');</script>
+                                         
                                             <div class="form-group">
                                                  <button type="button" onclick="LoginCuidador()" class="btn btn-primary btn-block" data-target="#myModal" data-backdrop="static" data-keyboard="false" id="buttonlogin" disabled="true">Começar!</button>
                                             </div>
@@ -95,27 +102,36 @@
                                          <form class="form" id="registernav" role="form">
                                                 <div class="form-group">
                                                      <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                                     <input type="email" class="form-control" id="emailregistar" placeholder="Endereço Electrónico" required>
+                                                     <input type="email" class="form-control" id="emailregistar" placeholder="Endereço Electrónico">
                                                 </div>
+                                                <script>bootstrapValidate('#emailregistar', 'email:Introduza um email válido!');</script>
 
                                                 <div class="form-group">
                                                     <label class="sr-only" for="exampleFirstName">Primeiro Nome</label>
-                                                    <input type="text" class="form-control" id="primeironomecuidador" placeholder="Primeiro nome" required>
+                                                    <input type="text" class="form-control" id="primeironomecuidador" placeholder="Primeiro nome">
                                                 </div>
+                                                <script>bootstrapValidate('#primeironomecuidador', 'min:2:Introduza um nome válido!');</script>
+                                             
                                                 <div class="form-group">
                                                     <label class="sr-only" for="exampleLastName">Último Nome</label>
-                                                    <input type="text" class="form-control" id="ultimonomecuidador" placeholder="Último Nome" required>
+                                                    <input type="text" class="form-control" id="ultimonomecuidador" placeholder="Último Nome">
                                                 </div>
+                                                <script>bootstrapValidate('#ultimonomecuidador', 'min:2:Introduza um nome válido!');</script>
+                                             
                                                 <div class="form-group">
                                                     <label class="sr-only" for="exampleProfissao">Profissão</label>
                                                     <input type="text" class="form-control" id="profissao" placeholder="Profissão">
                                                 </div>
+                                                <script>bootstrapValidate('#ultimonomecuidador', 'min:2:Introduza um nome válido!');</script>
+                                             
                                                 <div class="form-group">
                                                      <label class="sr-only" for="exampleInputPassword2">Password</label>
-                                                     <input type="password" class="form-control" id="passwordregistar" placeholder="Palavra-passe" required>
+                                                     <input type="password" class="form-control" id="passwordregistar" placeholder="Palavra-passe">
                                                     <!-- Isto pode ser para um futuro -->
                                                      <!--<div class="help-block text-right"><a href="">Forget the password ?</a></div>-->
                                                 </div>
+                                                <script>bootstrapValidate('#passwordregistar', 'regex:^(?=.*[A-Za-z])(?=.*\\d)[A-Za-z\\d]{8,}$:A palavra-passe deve conter pelo menos uma letra e um número!');</script>
+                                             
                                                 <div class="form-group">
                                                      <button type="button" onclick="RegistaCuidador()" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false" id="buttonregistar" disabled="true">Registar!</button>
                                                 </div>
