--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -19,8 +19,12 @@
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         
         
+        
         <!-- Bootstrap core CSS -->
         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        
+        <!-- Bootstrap Validator -->
+        <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.1.3/dist/bootstrap-validate.js" ></script>
     
         <!-- Custom styles for this template -->
         <link href="/css/managepatients.css" rel="stylesheet">
@@ -136,35 +140,42 @@
           </div>
 
     </div>
- 
+ <!-- /.container -->
 
-<!-- Popup do Plus -->
+<!------------------------- Popup do Plus --------------------------->
     <div class="modal fade popup-plus" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header text-center">
-                <h2 class="modal-title w-100 font-weight-bold modal-titulo">Novo Utente</h2>
+                <h2 class="modal-title w-100 font-weight-bold modal-titulo" id="utente-titulo">Novo Utente</h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="formaddpatient">
                 <div class="form-group">
                     <label for="inputprinome">Primeiro nome</label>
                     <input type="text" id="prmeiroNome" class="form-control" placeholder="p.e.: Amália">
                 </div>
+                <script>bootstrapValidate('#prmeiroNome', 'min:2:Escreva um nome válido!');</script>
+                
                 <div class="form-group">
                     <label for="inputultnome">Último nome</label>
                     <input type="text" id="ultimoNome" class="form-control" placeholder="p.e.: Rodrigues">
                 </div>
+                <script>bootstrapValidate('#ultimoNome', 'min:2:Escreva um nome válido!');</script>
+                
                 <div class="form-group">
                     <label for="inputidade">Idade</label>
-                    <input type="text" id="idade" class="form-control" placeholder="p.e.: 98">
+                    <input type="number" id="idade" class="form-control" placeholder="p.e.: 98">
                 </div>
+                <script>bootstrapValidate('#idade', 'integer:Introduza uma idade válida!');</script>
+                
                 <div class="form-group">
                     <label for="inputidade">Observações relevantes</label>
                     <textarea type="text" id="obs" class="form-control" rows="3" placeholder="Tem algum tipo de demência? Problemas de visão/audição? Gostos?"></textarea>
                 </div>
+                <script>bootstrapValidate('#obs', 'required:Preencha este campo!');</script>
                 
                 <div class="form-group">
                     <label>Escolha uma imagem</label>
@@ -184,7 +195,7 @@
             <div class="modal-footer d-flex justify-content-center">
                 <div class="row">
                         <div class="col-sm-6">
-                           <button data-dismiss="modal" onclick="AddPatient()" class="btn btn-default btn-lg btn-block button-popup-success"><i class="fas fa-plus-circle"></i> Adicionar</button> 
+                           <button data-dismiss="modal" onclick="AddPatient()" class="btn btn-default btn-lg btn-block button-popup-success" disabled="true" id="addpatient"><i class="fas fa-plus-circle"></i> Adicionar</button> 
                         </div>
                         <div class="col-sm-6">
                             <button data-dismiss="modal" onclick="" class="btn btn-default btn-lg btn-block button-popup-fail"><i class="fas fa-times-circle"></i> Cancelar</button>
@@ -195,7 +206,6 @@
     </div>
 </div>
 
-    <!-- /.container -->
-
+ 
   </body>
 </html>
