--- a/server/public/css/managepatients.css
+++ b/server/public/css/managepatients.css
@@ -1,9 +1,13 @@
-h3{
+h3 {
     margin-bottom: 0px !important;
     font-family: 'Muli';
     color: #f5dbcf;
+    text-decoration: none !important;
 }
 
+h3:hover{
+    color: #f9ebe4;
+}
 .col-lg-4{
     margin-bottom: 20px !important;
 }
@@ -22,6 +26,7 @@ h3{
 }
 
 .bolitas:hover{
+    text-decoration: none !important;
     -webkit-filter: brightness(110%);
 }
 
