Página de edição dos utentes - terminada!

--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -11,7 +11,7 @@
         <title>ImmersiveMind</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/js/server.js"></script>
-        <script src="/js/popular.js"></script>
+        <script src="/js/popularUtentes.js"></script>
 
 
         <!-- Bootstrap core JavaScript -->
@@ -101,8 +101,8 @@
     
             <!-- BREADCRUMB-->
 
-            <div class="btn btn-default btn-arrow-right"><a href="frontpage"><span class="fas fa-home bread"></span></a></div>
-            <div class="btn btn-default btn-arrow-right bread">Gerir Utentes</div>
+            <div class="btn btn-default btn-arrow-right"><a href="frontpage"><i class="fas fa-home bread"></i></a></div>
+            <div class="btn btn-default btn-arrow-right"><a href="" class="bread">Gerir Utentes</a></div>
             <!--<div class="btn btn-default btn-arrow-right">Danger</div>-->
         
  <!-- ******************************************************************************************************************* -->
