--- a/server/public/css/managepatients.css
+++ b/server/public/css/managepatients.css
@@ -2,14 +2,13 @@ h3 {
     margin-bottom: 0px !important;
     font-family: 'Muli';
     color: #f5dbcf;
-    text-decoration: none !important;
 }
 
 h3:hover{
     color: #f9ebe4;
 }
-.col-lg-4{
-    margin-bottom: 20px !important;
+.bolinhas_utentes:hover{
+    text-decoration: none !important;
 }
 
 .bolitas{
