Tem os tabs para as sessões

--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -105,25 +105,25 @@
             <a href="#"><img class="card-img-top" src="images/crop/cardboardLadyagain.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a a href="#">Iniciar Actividade</a>
+                <a href="#">Iniciar Actividade</a>
               </h4>
               <p class="card-text">Sem qualquer passo intermédio, inicie de imediato a visualização de vídeos.</p>
             </div>
           </div>
           <div class="card">
-            <a href="#"><img class="card-img-top" src="images/crop/checklistagain.jpg" alt=""></a>
+            <a href="sessions"><img class="card-img-top" src="images/crop/checklistagain.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a a href="#">Planear Actividade</a>
+                <a href="sessions">As minhas sessões</a>
               </h4>
-              <p class="card-text">Planeie com antecedência os vídeos que pretende observar.</p>
+              <p class="card-text">Planeie os vídeos que pretende observar e organize as suas sessões.</p>
             </div>
           </div>
           <div class="card">
             <a href="patients"><img class="card-img-top" src="images/crop/planningagain.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a a href="patients">Gerir Utentes</a>
+                <a href="patients">Gerir Utentes</a>
               </h4>
               <p class="card-text">Crie e/ou modifique a informação associada aos utentes a seu cuidado.</p>
                 
