--- a/server/views/managesessions.html
+++ b/server/views/managesessions.html
@@ -18,10 +18,6 @@
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         
-         <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
-<link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
-<link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
-        
         
         <!-- Bootstrap core CSS -->
         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -234,7 +230,7 @@
                         </div>
                         
                         <div class="col-sm-3" style="display: none;" id="botaoIniciar">
-                            <button data-dismiss="modal" href="" class="btn btn-default btn-lg btn-block button-popup-success-iniciar btn-size" id='botaoMesmoIniciar'><i class="fas fa-play-circle"></i> Iniciar</button>
+                            <button onclick="window.location='activity'" data-dismiss="modal" class="btn btn-default btn-lg btn-block button-popup-success-iniciar btn-size" id='botaoMesmoIniciar'><i class="fas fa-play-circle"></i> Iniciar</button>
                         </div>
                     
                         <div class="col-sm-3" style="display: none;" id="botaoApagar">
